[package]
edition = "2021"
version = "0.1.0"
name = "mykeccak"

[dependencies]
crunchy = "0.2.2"

[features]
default = []
cshake = []
fips202 = ["keccak", "shake", "sha3"]
k12 = []
keccak = []
kmac = ["cshake"]
parallel_hash = ["cshake"]
sha3 = []
shake = []
sp800 = ["cshake", "kmac", "tuple_hash"]
tuple_hash = ["cshake"]
